tests/NormalTests/paczka1/fuzzy1/92909539.err
Error in line 1: iyMm A894 84,5
Error in line 9: iyMm S906 86,7
Error in line 7: SZOQIiFKJd A894 72,4
Error in line 16: iyMm A221 30,1
Error in line 24: iyMm S473 10,3
Error in line 31: SZOQIiFKJd A894 -4,7
Error in line 23: SZOQIiFKJd A894 65,0
